1. 搭建故事版

--- a/Plant-iOS/Base.lproj/Main.storyboard
+++ b/Plant-iOS/Base.lproj/Main.storyboard
@@ -1,26 +1,161 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="f3X-L7-aNJ">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="Mr9-kW-PtN">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BAO-5O-3w8" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="JVb-ap-MaR"/>
+                        <viewControllerLayoutGuide type="bottom" id="rw7-AX-ent"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="RZ3-3m-aHQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="D4d-OH-3i1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7qp-Ww-PLU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1364" y="137.18140929535232"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Rem-aH-9xM">
+            <objects>
+                <viewController id="CGj-mS-utY" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rlB-ja-h9M"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ouy-Q2-whm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="X1F-XJ-4CG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="axB-Pn-oHo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2422" y="137"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="PPH-X2-BTm">
+            <objects>
+                <viewController id="UoE-ZN-cJH" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3ak-v7-I3W"/>
+                        <viewControllerLayoutGuide type="bottom" id="vPm-Oe-mLm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qIM-vZ-utc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="9ih-gb-joH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O4Y-nD-dFA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1364" y="-517.6911544227886"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="lmj-Q5-Dad">
+            <objects>
+                <viewController id="7bp-Lt-VgN" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qQ9-bC-V1s"/>
+                        <viewControllerLayoutGuide type="bottom" id="hO0-UV-sV7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4Jb-of-VEb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r0h-8h-blO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2422" y="-1242"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="852-Sx-Emt">
+            <objects>
+                <viewController id="e09-Jp-WHW" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ken-kY-lrq"/>
+                        <viewControllerLayoutGuide type="bottom" id="Vo6-VT-dVL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5vn-o8-cML">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pWQ-Pn-c8J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2422" y="-518"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="3I3-5k-20g">
+            <objects>
+                <tabBarController id="f3X-L7-aNJ" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="BAF-CS-pOi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Btx-c7-xIc" kind="relationship" relationship="viewControllers" id="p5U-DN-bo3"/>
+                        <segue destination="Dj0-Tc-fAT" kind="relationship" relationship="viewControllers" id="gO8-ji-31f"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dLQ-cn-fcl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-527" y="-189"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="WVX-fG-PVA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Btx-c7-xIc" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 1" id="aE3-pB-bd8"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CCX-xv-xjq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UoE-ZN-cJH" kind="relationship" relationship="rootViewController" id="X5R-l5-tfJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SMY-ck-a4y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="424.80000000000001" y="-517.6911544227886"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="RR9-EJ-rCn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Dj0-Tc-fAT" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 2" id="IId-jT-0uv"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ege-72-ic5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BAO-5O-3w8" kind="relationship" relationship="rootViewController" id="l6R-fd-hwO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xHf-Hw-XgW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="424.80000000000001" y="137.18140929535232"/>
         </scene>
     </scenes>
 </document>
