--- a/Plant-iOS/Base.lproj/Main.storyboard
+++ b/Plant-iOS/Base.lproj/Main.storyboard
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="f3X-L7-aNJ">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="f3X-L7-aNJ">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Messages View Controller-->
         <scene sceneID="Mr9-kW-PtN">
             <objects>
-                <viewController id="BAO-5O-3w8" sceneMemberID="viewController">
+                <viewController id="BAO-5O-3w8" customClass="MessagesViewController" customModule="Plant_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="JVb-ap-MaR"/>
                         <viewControllerLayoutGuide type="bottom" id="rw7-AX-ent"/>
@@ -20,18 +17,49 @@
                     <view key="view" contentMode="scaleToFill" id="RZ3-3m-aHQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Voe-gL-BIp">
+                                <frame key="frameInset" minX="67" minY="269" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="messageCell" id="qwM-FL-GWq" customClass="MessageTableViewCell" customModule="Plant_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="240" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qwM-FL-GWq" id="1BF-Y3-YFI">
+                                            <frame key="frameInset" width="240" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="CGj-mS-utY" kind="showDetail" identifier="showMessageInfo" id="PUA-UG-WkP"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" selectionStyle="default" indentationWidth="10" translatesAutoresizingMaskIntoConstraints="NO" id="QSV-Vz-d7v">
+                                <frame key="frameInset" minX="77" minY="279" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QSV-Vz-d7v" id="biB-b1-M5Y">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="D4d-OH-3i1"/>
+                    <connections>
+                        <outlet property="messagesTableView" destination="Voe-gL-BIp" id="XiS-Sb-yQ0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7qp-Ww-PLU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1364" y="137.18140929535232"/>
         </scene>
-        <!--View Controller-->
+        <!--Message Info View Controller-->
         <scene sceneID="Rem-aH-9xM">
             <objects>
-                <viewController id="CGj-mS-utY" sceneMemberID="viewController">
+                <viewController id="CGj-mS-utY" customClass="MessageInfoViewController" customModule="Plant_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="rlB-ja-h9M"/>
                         <viewControllerLayoutGuide type="bottom" id="Ouy-Q2-whm"/>
@@ -44,12 +72,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="axB-Pn-oHo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2422" y="137"/>
+            <point key="canvasLocation" x="2246" y="137"/>
         </scene>
-        <!--View Controller-->
+        <!--Plants View Controller-->
         <scene sceneID="PPH-X2-BTm">
             <objects>
-                <viewController id="UoE-ZN-cJH" sceneMemberID="viewController">
+                <viewController id="UoE-ZN-cJH" customClass="PlantsViewController" customModule="Plant_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3ak-v7-I3W"/>
                         <viewControllerLayoutGuide type="bottom" id="vPm-Oe-mLm"/>
@@ -57,18 +85,47 @@
                     <view key="view" contentMode="scaleToFill" id="qIM-vZ-utc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="17d-JO-KvD">
+                                <frame key="frameInset" minX="67" minY="269" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="plantCell" id="iuL-bT-2Ri" customClass="PlantTableViewCell" customModule="Plant_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="240" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iuL-bT-2Ri" id="VTZ-ze-dLd">
+                                            <frame key="frameInset" width="240" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="e09-Jp-WHW" kind="showDetail" identifier="showPlantInfo" id="OXd-2g-iGn"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="9ih-gb-joH"/>
+                    <navigationItem key="navigationItem" id="9ih-gb-joH">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ilw-RX-9Jj">
+                            <connections>
+                                <segue destination="7bp-Lt-VgN" kind="show" identifier="addPlant" action="showDetailViewController:sender:" id="E18-SN-nPR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="plantsTableView" destination="17d-JO-KvD" id="3OX-ky-2g8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O4Y-nD-dFA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1364" y="-517.6911544227886"/>
         </scene>
-        <!--View Controller-->
+        <!--Add Plant View Controller-->
         <scene sceneID="lmj-Q5-Dad">
             <objects>
-                <viewController id="7bp-Lt-VgN" sceneMemberID="viewController">
+                <viewController id="7bp-Lt-VgN" customClass="AddPlantViewController" customModule="Plant_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qQ9-bC-V1s"/>
                         <viewControllerLayoutGuide type="bottom" id="hO0-UV-sV7"/>
@@ -81,12 +138,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r0h-8h-blO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2422" y="-1242"/>
+            <point key="canvasLocation" x="2246" y="-1177"/>
         </scene>
-        <!--View Controller-->
+        <!--Plant Info View Controller-->
         <scene sceneID="852-Sx-Emt">
             <objects>
-                <viewController id="e09-Jp-WHW" sceneMemberID="viewController">
+                <viewController id="e09-Jp-WHW" customClass="PlantInfoViewController" customModule="Plant_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ken-kY-lrq"/>
                         <viewControllerLayoutGuide type="bottom" id="Vo6-VT-dVL"/>
@@ -99,7 +156,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pWQ-Pn-c8J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2422" y="-518"/>
+            <point key="canvasLocation" x="2247" y="-518"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="3I3-5k-20g">
@@ -144,7 +201,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Dj0-Tc-fAT" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item 2" id="IId-jT-0uv"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ege-72-ic5">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Ege-72-ic5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
